--- a/progress_meter/.vscode/settings.json
+++ b/progress_meter/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "cmake.sourceDirectory": "C:/Users/USER/working_files/GitHub/progress_meter/progress_meter/windows/flutter",
-  "java.compile.nullAnalysis.mode": "automatic"
+  "java.compile.nullAnalysis.mode": "automatic",
+  "java.configuration.updateBuildConfiguration": "automatic"
 }
