--- a/progress_meter/pubspec.yaml
+++ b/progress_meter/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.4.0
   lottie: ^3.1.2
+  provider: ^6.1.2
+  cloud_firestore: ^5.4.1
 
 dev_dependencies:
   flutter_test:
