--- a/progress_meter/pubspec.yaml
+++ b/progress_meter/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.4.0
   lottie: ^3.1.2
+  animated_splash_screen: ^1.3.0
 
 dev_dependencies:
   flutter_test:
