--- a/progress_meter/pubspec.yaml
+++ b/progress_meter/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   animated_splash_screen: ^1.3.0
   provider: ^6.1.2
   cloud_firestore: ^5.4.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
