--- a/progress_meter/pubspec.yaml
+++ b/progress_meter/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   provider: ^6.1.2
   cloud_firestore: ^5.4.1
   intl: ^0.19.0
+  video_player: ^2.9.1
 
 dev_dependencies:
   flutter_test:
