--- a/progress_meter/pubspec.yaml
+++ b/progress_meter/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -95,3 +96,16 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/progress_meter.png"
+  min_sdk_android: 21
+  web:
+    generate: true
+    image_path: "assets/progress_meter.png"
+  windows:
+    generate: true
+    image_path: "assets/progress_meter.png"
