--- a/progress_meter/pubspec.yaml
+++ b/progress_meter/pubspec.yaml
@@ -105,7 +105,7 @@ flutter_launcher_icons:
   min_sdk_android: 21
   web:
     generate: true
-    image_path: "assets/progress_meter.png"
+    image_path: "assets/progress_meter_full.png"
   windows:
     generate: true
-    image_path: "assets/progress_meter.png"
+    image_path: "assets/progress_meter_full.png"
